[gd_scene load_steps=47 format=2]

[ext_resource path="res://MenuMode.gd" type="Script" id=1]
[ext_resource path="res://TExtures/MenuBackground.png" type="Texture" id=2]
[ext_resource path="res://TExtures/BUtton/frame0000.png" type="Texture" id=3]
[ext_resource path="res://TExtures/BUtton/frame0001.png" type="Texture" id=4]
[ext_resource path="res://TExtures/BUtton/frame0002.png" type="Texture" id=5]
[ext_resource path="res://TExtures/BUtton/frame0003.png" type="Texture" id=6]
[ext_resource path="res://TExtures/BUtton/frame0004.png" type="Texture" id=7]
[ext_resource path="res://TExtures/BUtton/frame0005.png" type="Texture" id=8]
[ext_resource path="res://TExtures/BUtton/frame0006.png" type="Texture" id=9]
[ext_resource path="res://TExtures/BUtton/frame0007.png" type="Texture" id=10]
[ext_resource path="res://TExtures/BUtton/frame0008.png" type="Texture" id=11]
[ext_resource path="res://TExtures/BUtton/frame0009.png" type="Texture" id=12]
[ext_resource path="res://TExtures/BUtton/frame0010.png" type="Texture" id=13]
[ext_resource path="res://TExtures/BUtton/frame0011.png" type="Texture" id=14]
[ext_resource path="res://TExtures/BUtton/frame0012.png" type="Texture" id=15]
[ext_resource path="res://TExtures/BUtton/frame0013.png" type="Texture" id=16]
[ext_resource path="res://TExtures/BUtton/frame0014.png" type="Texture" id=17]
[ext_resource path="res://TExtures/BUtton/frame0015.png" type="Texture" id=18]
[ext_resource path="res://TExtures/BUtton/frame0016.png" type="Texture" id=19]
[ext_resource path="res://TExtures/BUtton/frame0017.png" type="Texture" id=20]
[ext_resource path="res://TExtures/BUtton/frame0018.png" type="Texture" id=21]
[ext_resource path="res://TExtures/BUtton/frame0019.png" type="Texture" id=22]
[ext_resource path="res://TExtures/BUtton/frame0020.png" type="Texture" id=23]
[ext_resource path="res://TExtures/BUtton/frame0021.png" type="Texture" id=24]
[ext_resource path="res://TExtures/BUtton/frame0022.png" type="Texture" id=25]
[ext_resource path="res://TExtures/BUtton/frame0023.png" type="Texture" id=26]
[ext_resource path="res://TExtures/BUtton/frame0024.png" type="Texture" id=27]
[ext_resource path="res://TExtures/BUtton/frame0025.png" type="Texture" id=28]
[ext_resource path="res://TExtures/BUtton/frame0026.png" type="Texture" id=29]
[ext_resource path="res://TExtures/BUtton/frame0027.png" type="Texture" id=30]
[ext_resource path="res://TExtures/BUtton/frame0028.png" type="Texture" id=31]
[ext_resource path="res://TExtures/BUtton/frame0029.png" type="Texture" id=32]
[ext_resource path="res://TExtures/BUtton/frame0030.png" type="Texture" id=33]
[ext_resource path="res://TExtures/BUtton/frame0031.png" type="Texture" id=34]
[ext_resource path="res://TExtures/BUtton/frame0032.png" type="Texture" id=35]
[ext_resource path="res://TExtures/BUtton/frame0033.png" type="Texture" id=36]
[ext_resource path="res://TExtures/BUtton/frame0034.png" type="Texture" id=37]
[ext_resource path="res://TExtures/BUtton/frame0035.png" type="Texture" id=38]
[ext_resource path="res://TExtures/BUtton/frame0036.png" type="Texture" id=39]
[ext_resource path="res://TExtures/BUtton/frame0037.png" type="Texture" id=40]
[ext_resource path="res://TExtures/BUtton/frame0038.png" type="Texture" id=41]
[ext_resource path="res://TExtures/BUtton/frame0039.png" type="Texture" id=42]
[ext_resource path="res://TExtures/BUtton/frame0040.png" type="Texture" id=43]
[ext_resource path="res://FrameDiff.gd" type="Script" id=44]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0.078125, 0.078125, 0 )
draw_center = false
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Shadow" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "Button",
"speed": 12.0
} ]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 772.211, 428.249 )
scale = Vector2( 0.81934, 0.806393 )
texture = ExtResource( 2 )

[node name="StartGame" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 534.0
margin_top = 206.0
margin_right = 823.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="StartGame" index="0"]

position = Vector2( 143.498, 46.93 )
frames = SubResource( 2 )
animation = "Button"
frame = 36
playing = true
script = ExtResource( 44 )
_sections_unfolded = [ "Transform" ]

[node name="Label3" type="Label" parent="StartGame/AnimatedSprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -142.0
margin_top = -36.0
margin_right = -45.0
margin_bottom = -12.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
text = "Start Game"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Margin", "Rect", "custom_colors", "custom_constants", "custom_styles" ]

[node name="Credits" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 780.0
margin_top = 373.0
margin_right = 1071.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Credits" index="0"]

position = Vector2( 140.409, 37.3087 )
frames = SubResource( 2 )
animation = "Button"
frame = 35
playing = true
script = ExtResource( 44 )

[node name="Label2" type="Label" parent="Credits/AnimatedSprite2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -141.0
margin_top = -39.0
margin_right = -46.0
margin_bottom = -14.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
text = "Credits"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Margin", "Rect", "custom_colors", "custom_constants", "custom_styles" ]

[node name="Exit" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 542.0
margin_top = 538.0
margin_right = 827.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Exit" index="0"]

position = Vector2( 136.001, 48.4572 )
frames = SubResource( 2 )
animation = "Button"
frame = 34
playing = true
script = ExtResource( 44 )

[node name="Label" type="Label" parent="Exit/AnimatedSprite3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -141.0
margin_top = -39.0
margin_right = -46.0
margin_bottom = -11.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
text = "Exit"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Margin", "Rect", "custom_colors", "custom_constants", "custom_styles" ]

[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]

[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]


